--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jacquard+24&family=Sedan:ital@0;1&display=swap');
+
 body {
     background-image: url('./images/rain.png');
     background-repeat: no-repeat;
@@ -9,17 +11,29 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
+    box-shadow: 0px 0px 10px lightblue,;
 }
 
 .box {
     padding: 200px;
+    background-size: contain;
+    display: block;
 }
 
 .picture {
     background-image: url('./images/blpearl.png');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    box-shadow: 0px 0px 10px lightblue,
-                inset 20px 20px 300px 20px rgba(0, 0, 0, 0.87);
+    box-shadow: inset 20px 20px 300px 20px rgba(0, 0, 0, 0.87);
+}
+
+.header{
+    font-family: "Jacquard 24", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: #ffd900ce;
+    font-size: 3rem;
+    margin-top: 300px;
+    text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
 }
