--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
-    box-shadow: 0px 0px 10px lightblue,;
+    flex-direction: column;
 }
 
 .box {
@@ -28,12 +28,38 @@ body {
     box-shadow: inset 20px 20px 300px 20px rgba(0, 0, 0, 0.87);
 }
 
-.header{
+.header {
     font-family: "Jacquard 24", system-ui;
     font-weight: 400;
     font-style: normal;
     color: #ffd900ce;
     font-size: 3rem;
-    margin-top: 300px;
+    margin-top: 200px;
     text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
+}
+
+.picture .btn {
+    font-family: "Jacquard 24", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    border-radius: 5px;
+    background-color: #d4b60e;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
+}
+
+.btn {
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #10908b59;
+    color: white;
+    border: 2px solid rgb(241, 118, 4);
 }
