--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     height: 256px;
     background-image: url('./images/sprite.png');
     background-repeat: no-repeat;
+    background-size: cover;
     
 }
 
