--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body {
     background-image: url('./images/rain.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: linear-gradient(to right, rgb(3, 82, 193) , rgb(0, 251, 255));
 }
 
 .container {
-    height: 100vh;
+    height: 65vh;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -15,14 +16,14 @@ body {
 }
 
 .box {
-    padding: 200px;
-    background-size: contain;
-    display: block;
+    width: 400px;
+   display: flex;
+   flex-direction: column;
 }
 
 .picture {
     background-image: url('./images/blpearl.png');
-    background-size: contain;
+    background-size: auto contain;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: inset 20px 20px 300px 20px rgba(0, 0, 0, 0.87);
@@ -35,6 +36,7 @@ body {
     color: #ffd900ce;
     font-size: 3rem;
     margin-top: 200px;
+    margin-left: 100px;
     text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
 }
 
@@ -51,6 +53,7 @@ body {
     text-decoration: none;
     display: inline-block;
     text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
+    margin-left: 100px;
 }
 
 .btn {
