--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-    height: 65vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -17,9 +17,9 @@ body {
 
 .box {
     width: 400px;
-   display: flex;
-   flex-direction: column;
-   background-attachment:fixed, scroll fixed;
+    display: flex;
+    flex-direction: column;
+    background-attachment:fixed, scroll, fixed;
 }
 
 .picture {
@@ -67,13 +67,13 @@ body {
     color: white;
     border: 2px solid rgb(241, 118, 4);
 }
-.sprite{
-    max-width: 1000px;
-    margin: auto;
-}
+
 .mdias{
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    margin-top:  50px;
 }
 
 .media{
@@ -82,7 +82,7 @@ body {
     background-image: url('./images/sprite.png');
     background-repeat: no-repeat;
     background-size: cover;
-    
+    margin-bottom: 20px;
 }
 
 .icon1{
@@ -97,3 +97,39 @@ body {
     background-position: -0px -512px;
 }
 
+.decorated-element {
+    position: sticky;
+    top: 0px;
+    font-family: "Jacquard 24", system-ui;
+    text-align: center;
+    font-size: 2rem;
+    padding: 50px;
+    margin-bottom: 100px; 
+    background-image: linear-gradient(to right, rgb(7, 68, 153) , rgb(74, 225, 227));
+    border: 1px solid #ccc; 
+    width: 100%;
+}
+
+.decorated-element:before,
+.decorated-element:after {
+    content: "";
+    position: absolute;
+    width: 100px; 
+    height: 100px; 
+    background-repeat: no-repeat;
+    background-size: contain; 
+}
+
+.decorated-element:before {
+    top: 15px; 
+    left: 500px; 
+    background-image: url('./images/pirate-captain.png'); 
+    background-color: rgba(9, 150, 238, 0.4);
+}
+
+.decorated-element:after {
+    bottom: 15px; 
+    right: 500px; 
+    background-image: url('./images/mdi_pirate.png'); 
+    background-color: #bc8a0a;
+}
