--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 .container {
     height: 100%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -37,7 +38,6 @@ body {
     color: #ffd900ce;
     font-size: 3rem;
     margin-top: 200px;
-    margin-left: 100px;
     text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
 }
 
@@ -107,7 +107,7 @@ body {
     margin-bottom: 100px; 
     background-image: linear-gradient(to right, rgb(7, 68, 153) , rgb(74, 225, 227));
     border: 1px solid #ccc; 
-    width: 100%;
+    width: 90%;
 }
 
 .decorated-element:before,
@@ -122,14 +122,41 @@ body {
 
 .decorated-element:before {
     top: 15px; 
-    left: 500px; 
+    left: 400px; 
     background-image: url('./images/pirate-captain.png'); 
     background-color: rgba(9, 150, 238, 0.4);
 }
 
 .decorated-element:after {
     bottom: 15px; 
-    right: 500px; 
+    right: 400px; 
     background-image: url('./images/mdi_pirate.png'); 
     background-color: #bc8a0a;
+}
+
+.message-box {
+    position: absolute;
+    display: inline-block;
+    margin-left: 200px;
+}
+
+.message-box .message-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 105%;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.message-box:hover .message-text {
+    visibility: visible;
+    opacity: 1;
 }
