--- a/style.css
+++ b/style.css
@@ -1,47 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Jacquard+24&family=Sedan:ital@0;1&display=swap');
 
-body {
-    background-image: url('./images/rain.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: linear-gradient(to right, rgb(3, 82, 193) , rgb(0, 251, 255));
-}
-
-.container {
+body,
+html {
+    padding: 0;
+    margin: 0;
     height: 100%;
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+    font-family: "Jacquard 24", system-ui;
 }
 
-.box {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    background-attachment:fixed, scroll, fixed;
-}
-
-.picture {
-    background-image: url('./images/blpearl.png');
-    background-size: auto contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    box-shadow: inset 20px 20px 300px 20px rgba(0, 0, 0, 0.87);
+main{
+    background-image: url('./images/rain.png');
 }
 
 .header {
-    font-family: "Jacquard 24", system-ui;
-    font-weight: 400;
-    font-style: normal;
-    color: #ffd900ce;
-    font-size: 3rem;
-    margin-top: 200px;
-    text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
+    font-size: 2rem;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 80px; 
+    background-image: linear-gradient(to bottom right, rgb(0, 251, 255), rgb(0, 85, 255));
 }
 
-.picture .btn {
+
+.header:before,
+.header:after {
+    content: "";
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    transition: transform 0.3s ease-in-out; /* Додаємо перехід для плавності анімації */
+}
+
+.header:before {
+    background-image: url('./images/pirate-captain.png');
+    background-color: rgba(9, 150, 238, 0.4);
+    left: 50%;
+    transform: translateX(-170px) scale(1); /* Початковий масштаб */
+}
+
+.header:after {
+    background-image: url('./images/mdi_pirate.png');
+    background-color: #bc8a0a;
+    right: 50%;
+    transform: translateX(170px) scale(1); /* Початковий масштаб */
+}
+
+.header:hover:after {
+    transform: translateX(-100px) scale(1.1); /* Збільшуємо масштаб для :after */
+}
+
+.header:hover::before{
+    transform: translateX(100px) scale(1.1);
+}
+
+.blpearl {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+}
+
+.container-zero {
+    position: relative;
+    width: 390px;
+    height: 390px;
+    background-image: url('./images/blpearl.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(13, 180, 241, 0.3), 0 6px 20px 0 rgba(13, 180, 241, 0.3);
+}
+
+.btn {
     font-family: "Jacquard 24", system-ui;
     font-weight: 400;
     font-style: normal;
@@ -52,111 +88,120 @@ body {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
-    margin-left: 100px;
-}
-
-.btn {
     transition-duration: 0.4s;
     cursor: pointer;
+    position: absolute; 
+    bottom: 20px; 
+    box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.6);
 }
 
 .btn:hover {
     background-color: #10908b59;
     color: white;
-    border: 2px solid rgb(241, 118, 4);
+    border: 3px solid rgb(241, 118, 4);
 }
 
-.mdias{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    margin-top:  50px;
+.mess-box {
+    position: absolute; 
+    top: 10px; 
+    left: 320px; 
 }
 
-.media{
-    width: 256px;
-    height: 256px;
-    background-image: url('./images/sprite.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 20px;
-}
-
-.icon1{
-    background-position: 0px 0px;
-}
-
-.icon2{
-    background-position: -0px -256px;
-}
-
-.icon3{
-    background-position: -0px -512px;
-}
-
-.decorated-element {
-    position: sticky;
-    top: 0px;
-    font-family: "Jacquard 24", system-ui;
-    text-align: center;
-    font-size: 2rem;
-    padding: 50px;
-    margin-bottom: 100px; 
-    background-image: linear-gradient(to right, rgb(7, 68, 153) , rgb(74, 225, 227));
-    border: 1px solid #ccc; 
-    width: 90%;
-}
-
-.decorated-element:before,
-.decorated-element:after {
-    content: "";
-    position: absolute;
-    width: 100px; 
-    height: 100px; 
-    background-repeat: no-repeat;
-    background-size: contain; 
-}
-
-.decorated-element:before {
-    top: 15px; 
-    left: 400px; 
-    background-image: url('./images/pirate-captain.png'); 
-    background-color: rgba(9, 150, 238, 0.4);
-}
-
-.decorated-element:after {
-    bottom: 15px; 
-    right: 400px; 
-    background-image: url('./images/mdi_pirate.png'); 
-    background-color: #bc8a0a;
-}
-
-.message-box {
-    position: absolute;
-    display: inline-block;
-    margin-left: 200px;
-}
-
-.message-box .message-text {
+.mess-box .message-text {
     visibility: hidden;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 2px rgb(218, 21, 21), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(28, 28, 30);
     width: 120px;
-    background-color: black;
-    color: white;
+    background-color: #d4b60e;
+    color: black;
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
     top: -5px;
-    left: 105%;
+    right: 105%;
     opacity: 0;
     transition: opacity 0.5s;
+    box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.6);
 }
 
-.message-box:hover .message-text {
+.mess-box:hover .message-text {
     visibility: visible;
     opacity: 1;
+}
+
+.mdias {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+
+.media {
+    width: 256px;
+    height: 256px;
+    background-image: url('./images/sprite.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 10px;
+}
+
+.icon1 {
+    background-position: 0 0;
+}
+
+.icon2 {
+    background-position: 0 -256px;
+}
+
+.icon3 {
+    background-position: 0 -512px;
+}
+
+@media (max-width:991px){
+    .header {
+        font-size: 1.5rem; 
+    }
+
+    .container-zero{
+        width: 350px;
+        height: 350px;
+    }
+
+    .btn {
+        font-size: 1.2rem; 
+        padding: 10px 20px; 
+    }
+}
+
+@media (max-width:991px){
+ .mess-box{
+    left: 290px;
+    }
+}
+
+@media (max-width: 829px) {
+    .header {
+        font-size: 1.5rem; 
+    }
+
+    .btn {
+        font-size: 1.2rem; 
+        padding: 10px 20px; 
+    }
+
+    .mdias {
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        margin: 10px;
+    }
+
 }
